--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "express": "^4.16.3",
     "nodemon": "^1.17.4",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
     "redux": "^4.0.0",
     "webpack": "^4.8.1",
     "webpack-dev-middleware": "^3.1.3"
