--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "nodemon": "^1.17.4",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-hot-loader": "^4.1.3",
+    "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "webpack": "^4.8.1",
-    "webpack-dev-middleware": "^3.1.3"
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.1"
   }
 }
