--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "react-hot-loader": "^4.1.3",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
+    "redux-devtools": "^3.4.1",
+    "redux-devtools-dock-monitor": "^1.1.3",
+    "redux-devtools-log-monitor": "^1.4.0",
     "webpack": "^4.8.1",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-hot-middleware": "^2.22.1"
